<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:descendantFocusability="beforeDescendants"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/main_next"
        tools:listitem="@layout/list_item"/>

    <EditText
        android:id="@+id/main_charName"
        android:hint="CharacterName"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/main_addCharButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toLeftOf="@id/main_init"/>
    <EditText
        android:id="@+id/main_init"
        android:hint="Dex Mod"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/main_addCharButton"
        app:layout_constraintLeft_toRightOf="@id/main_charName"
        app:layout_constraintRight_toLeftOf="@id/main_hp"/>
    <EditText
        android:id="@+id/main_hp"
        android:inputType="number"
        android:hint="HP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/main_addCharButton"
        app:layout_constraintLeft_toRightOf="@id/main_init"
        app:layout_constraintRight_toRightOf="parent"/>
    <Button
        android:id="@+id/main_next"
        android:text="@string/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/main_charName"/>
    <Button
        android:id="@+id/main_addCharButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_character"
        app:layout_constraintRight_toLeftOf="@id/main_addnRollCharButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/main_deleteButton"/>
    <Button
        android:id="@+id/main_addnRollCharButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_n_roll"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/main_addCharButton"
        app:layout_constraintBottom_toTopOf="@id/main_deleteCharEdit"/>
    <Button
        android:id="@+id/main_deleteButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/main_deleteCharEdit"
        app:layout_constraintTop_toBottomOf="@id/main_addCharButton"/>
    <EditText
        android:id="@+id/main_deleteCharEdit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/char_name"
        app:layout_constraintTop_toBottomOf="@id/main_addCharButton"
        app:layout_constraintLeft_toRightOf="@id/main_deleteButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/main_sortButton"/>
    <Button
        android:id="@+id/main_sortButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort"
        app:layout_constraintTop_toBottomOf="@id/main_deleteCharEdit"
        app:layout_constraintBottom_toTopOf="@+id/main_roll"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/main_roll"
        android:text="Roll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/main_sortButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>