<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:background="@color/white"
    android:id="@+id/item_main"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/item_name"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:textStyle="bold"
        android:text="@string/item_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/item_init_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/item_dex_mod"
        app:layout_constraintLeft_toRightOf="@+id/item_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/item_hp_text"/>

    <TextView
        android:id="@+id/item_hp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="32dp"
        android:text="@string/item_hp"
        app:layout_constraintLeft_toLeftOf="@+id/item_init_text"
        app:layout_constraintRight_toRightOf="@id/item_init_text"
        app:layout_constraintTop_toBottomOf="@+id/item_init_text"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <EditText
        android:id="@+id/item_init_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:inputType="number"
        android:hint="0"
        android:focusableInTouchMode="true"
        app:layout_constraintLeft_toRightOf="@id/item_init_text"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:id="@+id/item_hp_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="0"
        android:focusableInTouchMode="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/item_init_edit"
        app:layout_constraintRight_toRightOf="@id/item_init_edit"
        />

    <TextView
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/plus"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@id/minus"
        app:layout_constraintLeft_toRightOf="@id/item_init_edit"
        app:layout_constraintRight_toLeftOf="@id/item_init_roll"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/plus"
        app:layout_constraintLeft_toLeftOf="@+id/plus"
        app:layout_constraintRight_toRightOf="@id/plus"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/item_init_roll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="0"
        android:focusableInTouchMode="true"
        app:layout_constraintLeft_toRightOf="@id/plus"
        app:layout_constraintRight_toLeftOf="@id/item_init_res"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/item_hp_roll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="0"
        android:focusableInTouchMode="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/item_init_roll"
        app:layout_constraintRight_toRightOf="@id/item_init_roll"
        />
    <TextView
        android:id="@+id/item_init_sum_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="="
        app:layout_constraintLeft_toRightOf="@+id/item_init_roll"
        app:layout_constraintRight_toLeftOf="@+id/item_init_res"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/item_hp_sum_sign"/>

    <TextView
        android:id="@+id/item_hp_sum_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="="
        app:layout_constraintLeft_toLeftOf="@+id/item_init_sum_sign"
        app:layout_constraintRight_toRightOf="@+id/item_init_sum_sign"
        app:layout_constraintTop_toBottomOf="@id/item_init_sum_sign"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/item_init_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/item_init_roll"
        app:layout_constraintRight_toLeftOf="@id/item_button"
        app:layout_constraintBottom_toTopOf="@id/item_hp_res"/>
    <TextView
        android:id="@+id/item_hp_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="0"
        app:layout_constraintLeft_toLeftOf="@id/item_init_res"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@id/item_init_res"
        app:layout_constraintTop_toBottomOf="@id/item_init_res"/>

    <Button
        android:id="@+id/item_button"
        android:layout_width="45dp"
        android:layout_height="match_parent"
        android:text="@string/sum"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
        
</androidx.constraintlayout.widget.ConstraintLayout>